tests/rosetta/out/Java/average-loop-length.error
javac: exit status 1
/tmp/AverageLoopLength.java:13: error: incompatible types: double cannot be converted to String
        return Double.parseDouble(String.valueOf((Integer.parseInt(x))));
                                                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
